--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "typecheck": "astro check",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.5.9",
+    "@astrojs/check": "^0.9.6",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "prettier": "3.7.4",
