--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "eslint": "^9.39.2",
     "prettier": "3.7.4",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.7.2"
